<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spin_the_wheel_android_interview_topics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/label"
        android:layout_marginBottom="5dp"
        android:textSize="12pt"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/androidGreen"
        android:alpha="0.8"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toTopOf="@+id/topicItem"
        android:textSize="12pt"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@id/randombtn"
        android:background="@color/androidGreen"
        android:alpha="0.8"
        android:paddingBottom="15dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        />

    <Button
        android:id="@+id/randombtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/label"
        app:layout_constraintTop_toTopOf="@id/label"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/topicItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14pt"
        android:textStyle="italic"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/vguide1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.75"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="+ Add New"
        android:id="@+id/navigateBtn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>